--- a/notebooks/cycle01-data_analysis.ipynb
+++ b/notebooks/cycle01-data_analysis.ipynb
@@ -45,12 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 5,
    "id": "61b45de8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:23:35.717390Z",
-     "start_time": "2021-07-28T01:23:35.709393Z"
+     "end_time": "2021-08-04T23:49:23.086230Z",
+     "start_time": "2021-08-04T23:49:23.083267Z"
     }
    },
    "outputs": [],
@@ -76,12 +76,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 6,
    "id": "627d0f16",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:23:35.749377Z",
-     "start_time": "2021-07-28T01:23:35.717390Z"
+     "end_time": "2021-08-04T23:49:23.118229Z",
+     "start_time": "2021-08-04T23:49:23.087230Z"
     },
     "hidden": true
    },
@@ -166,18 +166,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 7,
    "id": "1a7492a9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:23:36.172828Z",
-     "start_time": "2021-07-28T01:23:35.749377Z"
+     "end_time": "2021-08-04T23:49:23.530237Z",
+     "start_time": "2021-08-04T23:49:23.120229Z"
     }
    },
    "outputs": [],
    "source": [
-    "df_raw = pd.read_csv('data/insurance_cross_sell.csv')\n",
-    "df_raw_test = pd.read_csv('data/test.csv')"
+    "df_raw = pd.read_csv('../data/insurance_cross_sell.csv')\n",
+    "df_raw_test = pd.read_csv('../data/test.csv')"
    ]
   },
   {
@@ -190,12 +190,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 8,
    "id": "5b22408b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:23:36.188841Z",
-     "start_time": "2021-07-28T01:23:36.172828Z"
+     "end_time": "2021-08-04T23:49:23.545946Z",
+     "start_time": "2021-08-04T23:49:23.531798Z"
     }
    },
    "outputs": [],
@@ -233,12 +233,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 9,
    "id": "517b12ee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:23:36.220846Z",
-     "start_time": "2021-07-28T01:23:36.188841Z"
+     "end_time": "2021-08-04T23:49:23.577494Z",
+     "start_time": "2021-08-04T23:49:23.546968Z"
     }
    },
    "outputs": [],
@@ -248,12 +248,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 10,
    "id": "da6e9552",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:23:36.236741Z",
-     "start_time": "2021-07-28T01:23:36.220846Z"
+     "end_time": "2021-08-04T23:49:23.593020Z",
+     "start_time": "2021-08-04T23:49:23.579105Z"
     }
    },
    "outputs": [
@@ -381,7 +381,7 @@
        "4  39    Male   45        8.000               124.000                1    1-2 Year            Yes                   0       42297.000      264         0"
       ]
      },
-     "execution_count": 298,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,12 +400,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 11,
    "id": "607e5c6c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:23:36.268726Z",
-     "start_time": "2021-07-28T01:23:36.236741Z"
+     "end_time": "2021-08-04T23:49:23.607941Z",
+     "start_time": "2021-08-04T23:49:23.593941Z"
     }
    },
    "outputs": [
@@ -415,7 +415,7 @@
        "(381109, 12)"
       ]
      },
-     "execution_count": 299,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,12 +434,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 12,
    "id": "63be52cf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:23:36.276725Z",
-     "start_time": "2021-07-28T01:23:36.268726Z"
+     "end_time": "2021-08-04T23:49:23.623283Z",
+     "start_time": "2021-08-04T23:49:23.609941Z"
     }
    },
    "outputs": [
@@ -461,7 +461,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 300,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,12 +480,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 13,
    "id": "0c29089d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:23:36.332702Z",
-     "start_time": "2021-07-28T01:23:36.276725Z"
+     "end_time": "2021-08-04T23:49:23.685978Z",
+     "start_time": "2021-08-04T23:49:23.625246Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,12 +542,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 14,
    "id": "5dd84542",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:23:36.396676Z",
-     "start_time": "2021-07-28T01:23:36.332702Z"
+     "end_time": "2021-08-04T23:49:23.734050Z",
+     "start_time": "2021-08-04T23:49:23.686979Z"
     }
    },
    "outputs": [],
@@ -596,12 +596,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 15,
    "id": "14e9d712",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:23:36.428661Z",
-     "start_time": "2021-07-28T01:23:36.396676Z"
+     "end_time": "2021-08-04T23:49:23.749139Z",
+     "start_time": "2021-08-04T23:49:23.735059Z"
     },
     "hidden": true
    },
@@ -622,12 +622,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 16,
    "id": "b45d5961",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:23:36.454399Z",
-     "start_time": "2021-07-28T01:23:36.430396Z"
+     "end_time": "2021-08-04T23:49:23.764058Z",
+     "start_time": "2021-08-04T23:49:23.750058Z"
     },
     "hidden": true
    },
@@ -638,12 +638,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 17,
    "id": "4bdf6f15",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:23:36.518437Z",
-     "start_time": "2021-07-28T01:23:36.454399Z"
+     "end_time": "2021-08-04T23:49:23.811591Z",
+     "start_time": "2021-08-04T23:49:23.765059Z"
     },
     "hidden": true
    },
@@ -664,12 +664,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 18,
    "id": "7ee4d11e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:23:36.534437Z",
-     "start_time": "2021-07-28T01:23:36.518437Z"
+     "end_time": "2021-08-04T23:49:23.827590Z",
+     "start_time": "2021-08-04T23:49:23.812590Z"
     },
     "hidden": true
    },
@@ -688,12 +688,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 19,
    "id": "20380c74",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:23:36.566423Z",
-     "start_time": "2021-07-28T01:23:36.534437Z"
+     "end_time": "2021-08-04T23:49:23.843590Z",
+     "start_time": "2021-08-04T23:49:23.828590Z"
     }
    },
    "outputs": [],
@@ -711,12 +711,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 20,
    "id": "dfeeda2e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:23:36.582480Z",
-     "start_time": "2021-07-28T01:23:36.566423Z"
+     "end_time": "2021-08-04T23:49:23.859590Z",
+     "start_time": "2021-08-04T23:49:23.844603Z"
     }
    },
    "outputs": [],
@@ -726,12 +726,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 21,
    "id": "593b46c4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:23:36.614522Z",
-     "start_time": "2021-07-28T01:23:36.582480Z"
+     "end_time": "2021-08-04T23:49:23.891431Z",
+     "start_time": "2021-08-04T23:49:23.860601Z"
     }
    },
    "outputs": [],
@@ -742,12 +742,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 22,
    "id": "4d8b10fa",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:23:36.887696Z",
-     "start_time": "2021-07-28T01:23:36.614522Z"
+     "end_time": "2021-08-04T23:49:24.142370Z",
+     "start_time": "2021-08-04T23:49:23.892431Z"
     }
    },
    "outputs": [],
@@ -757,12 +757,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 23,
    "id": "a3918866",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:23:36.903679Z",
-     "start_time": "2021-07-28T01:23:36.887696Z"
+     "end_time": "2021-08-04T23:49:24.158303Z",
+     "start_time": "2021-08-04T23:49:24.143291Z"
     }
    },
    "outputs": [],
@@ -780,12 +780,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 24,
    "id": "39053309",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:26:18.717198Z",
-     "start_time": "2021-07-28T01:26:18.709201Z"
+     "end_time": "2021-08-04T23:49:24.174261Z",
+     "start_time": "2021-08-04T23:49:24.158989Z"
     }
    },
    "outputs": [],
@@ -795,12 +795,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 25,
    "id": "19299b44",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:26:18.776014Z",
-     "start_time": "2021-07-28T01:26:18.717198Z"
+     "end_time": "2021-08-04T23:49:24.221693Z",
+     "start_time": "2021-08-04T23:49:24.175262Z"
     }
    },
    "outputs": [],
@@ -833,12 +833,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 26,
    "id": "0b3c62df",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:26:18.883626Z",
-     "start_time": "2021-07-28T01:26:18.776014Z"
+     "end_time": "2021-08-04T23:49:24.315216Z",
+     "start_time": "2021-08-04T23:49:24.222359Z"
     }
    },
    "outputs": [],
@@ -869,12 +869,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 27,
    "id": "1c80ee1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:26:18.896927Z",
-     "start_time": "2021-07-28T01:26:18.883626Z"
+     "end_time": "2021-08-04T23:49:24.330520Z",
+     "start_time": "2021-08-04T23:49:24.316222Z"
     }
    },
    "outputs": [],
@@ -892,12 +892,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 28,
    "id": "dffb15b0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:26:18.912920Z",
-     "start_time": "2021-07-28T01:26:18.896927Z"
+     "end_time": "2021-08-04T23:49:24.346400Z",
+     "start_time": "2021-08-04T23:49:24.331303Z"
     }
    },
    "outputs": [],
@@ -1130,12 +1130,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 29,
    "id": "daed5f6c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:26:19.390078Z",
-     "start_time": "2021-07-28T01:26:19.373926Z"
+     "end_time": "2021-08-04T23:49:48.618857Z",
+     "start_time": "2021-08-04T23:49:48.607825Z"
     }
    },
    "outputs": [],
@@ -1145,12 +1145,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 30,
    "id": "5072102d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:26:19.817689Z",
-     "start_time": "2021-07-28T01:26:19.390078Z"
+     "end_time": "2021-08-04T23:49:51.871159Z",
+     "start_time": "2021-08-04T23:49:51.444825Z"
     }
    },
    "outputs": [],
@@ -1171,12 +1171,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 31,
    "id": "727e13f9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:26:19.831167Z",
-     "start_time": "2021-07-28T01:26:19.819786Z"
+     "end_time": "2021-08-04T23:49:53.720221Z",
+     "start_time": "2021-08-04T23:49:53.710142Z"
     }
    },
    "outputs": [],
@@ -1186,12 +1186,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 46,
    "id": "599cc7c4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-28T01:26:19.889063Z",
-     "start_time": "2021-07-28T01:26:19.832797Z"
+     "end_time": "2021-08-04T23:52:43.867346Z",
+     "start_time": "2021-08-04T23:52:43.800039Z"
     }
    },
    "outputs": [],
@@ -1199,6 +1199,66 @@
     "df_performance_lr['response'] = y_valid.copy()\n",
     "df_performance_lr['score'] = pred_proba_lr[:, 1].tolist()\n",
     "df_metrics_lr = metrics_at_k(df_performance_lr, 'Logistic REegression', k=20000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "a14092fb",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-04T23:52:44.163084Z",
+     "start_time": "2021-08-04T23:52:44.152085Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Precision_at_k</th>\n",
+       "      <th>Recall_at_k</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Logistic REegression</th>\n",
+       "      <td>0.078</td>\n",
+       "      <td>0.168</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Precision_at_k  Recall_at_k\n",
+       "Logistic REegression           0.078        0.168"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_metrics_lr"
    ]
   },
   {
