--- a/notebooks/cycle02-data_exploration-EDA.ipynb
+++ b/notebooks/cycle02-data_exploration-EDA.ipynb
@@ -4445,7 +4445,7 @@
     "width": "303.825px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
