fixed some bugs

--- a/notebooks/cycle06-deployment.ipynb
+++ b/notebooks/cycle06-deployment.ipynb
@@ -6225,11 +6225,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-20T17:13:52.931357Z",
-     "start_time": "2021-09-20T17:13:52.848035Z"
+     "end_time": "2021-09-21T19:30:58.018574Z",
+     "start_time": "2021-09-21T19:30:57.881440Z"
     }
    },
    "outputs": [],
@@ -6239,11 +6239,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-20T17:13:53.391999Z",
-     "start_time": "2021-09-20T17:13:53.283190Z"
+     "end_time": "2021-09-21T19:30:52.760482Z",
+     "start_time": "2021-09-21T19:30:52.655260Z"
     }
    },
    "outputs": [],
@@ -6253,11 +6253,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-20T17:13:53.805817Z",
-     "start_time": "2021-09-20T17:13:53.788792Z"
+     "end_time": "2021-09-21T19:30:53.204533Z",
+     "start_time": "2021-09-21T19:30:53.191566Z"
     }
    },
    "outputs": [],
@@ -6267,11 +6267,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-20T17:13:54.280655Z",
-     "start_time": "2021-09-20T17:13:54.277607Z"
+     "end_time": "2021-09-21T19:30:53.639186Z",
+     "start_time": "2021-09-21T19:30:53.623177Z"
     }
    },
    "outputs": [],
@@ -6281,11 +6281,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-20T17:15:02.531460Z",
-     "start_time": "2021-09-20T17:15:01.748566Z"
+     "end_time": "2021-09-21T19:31:15.317714Z",
+     "start_time": "2021-09-21T19:31:00.200993Z"
     }
    },
    "outputs": [
@@ -6309,11 +6309,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-20T17:15:12.445339Z",
-     "start_time": "2021-09-20T17:15:12.431177Z"
+     "end_time": "2021-09-21T19:31:19.034702Z",
+     "start_time": "2021-09-21T19:31:19.009783Z"
     }
    },
    "outputs": [
@@ -6354,174 +6354,198 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>436468</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>51</td>\n",
+       "      <th>6</th>\n",
+       "      <td>417377</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>45</td>\n",
        "      <td>1</td>\n",
-       "      <td>28.000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>&gt; 2 Years</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>54206.000</td>\n",
-       "      <td>26.000</td>\n",
-       "      <td>17</td>\n",
-       "      <td>0.966</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>454416</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1</td>\n",
-       "      <td>47.000</td>\n",
+       "      <td>28.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1-2 Year</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>25562.000</td>\n",
-       "      <td>156.000</td>\n",
-       "      <td>87</td>\n",
-       "      <td>0.965</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>473291</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>41</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8.000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>&gt; 2 Years</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>2630.000</td>\n",
-       "      <td>7.000</td>\n",
-       "      <td>48</td>\n",
-       "      <td>0.948</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>398804</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>31</td>\n",
-       "      <td>1</td>\n",
-       "      <td>28.000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>&lt; 1 Year</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>26086.000</td>\n",
-       "      <td>152.000</td>\n",
-       "      <td>281</td>\n",
-       "      <td>0.943</td>\n",
+       "      <td>43639.0</td>\n",
+       "      <td>157.0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>0.960510</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>412368</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>27</td>\n",
+       "      <td>469824</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>34</td>\n",
        "      <td>1</td>\n",
-       "      <td>36.000</td>\n",
+       "      <td>14.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>&lt; 1 Year</td>\n",
+       "      <td>1-2 Year</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>2630.000</td>\n",
-       "      <td>152.000</td>\n",
-       "      <td>47</td>\n",
-       "      <td>0.859</td>\n",
+       "      <td>2630.0</td>\n",
+       "      <td>156.0</td>\n",
+       "      <td>168</td>\n",
+       "      <td>0.959011</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>398486</td>\n",
+       "      <td>480076</td>\n",
        "      <td>Female</td>\n",
-       "      <td>46</td>\n",
+       "      <td>21</td>\n",
        "      <td>1</td>\n",
-       "      <td>46.000</td>\n",
+       "      <td>41.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1-2 Year</td>\n",
-       "      <td>No</td>\n",
-       "      <td>21513.000</td>\n",
-       "      <td>124.000</td>\n",
-       "      <td>217</td>\n",
-       "      <td>0.696</td>\n",
+       "      <td>&lt; 1 Year</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>33522.0</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>205</td>\n",
+       "      <td>0.788614</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>417679</td>\n",
+       "      <th>4</th>\n",
+       "      <td>398194</td>\n",
        "      <td>Male</td>\n",
-       "      <td>25</td>\n",
+       "      <td>52</td>\n",
        "      <td>1</td>\n",
-       "      <td>3.000</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>&lt; 1 Year</td>\n",
+       "      <td>1-2 Year</td>\n",
        "      <td>No</td>\n",
-       "      <td>32627.000</td>\n",
-       "      <td>152.000</td>\n",
-       "      <td>57</td>\n",
-       "      <td>0.025</td>\n",
+       "      <td>2630.0</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>168</td>\n",
+       "      <td>0.019903</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>452670</td>\n",
+       "      <td>391401</td>\n",
        "      <td>Male</td>\n",
-       "      <td>25</td>\n",
+       "      <td>28</td>\n",
        "      <td>1</td>\n",
-       "      <td>6.000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>&lt; 1 Year</td>\n",
-       "      <td>No</td>\n",
-       "      <td>25254.000</td>\n",
-       "      <td>152.000</td>\n",
-       "      <td>46</td>\n",
-       "      <td>0.011</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>438081</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>25</td>\n",
-       "      <td>1</td>\n",
-       "      <td>17.000</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>1</td>\n",
        "      <td>&lt; 1 Year</td>\n",
        "      <td>No</td>\n",
-       "      <td>30496.000</td>\n",
-       "      <td>152.000</td>\n",
-       "      <td>156</td>\n",
-       "      <td>0.009</td>\n",
+       "      <td>2630.0</td>\n",
+       "      <td>152.0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0.010791</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>465941</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>65</td>\n",
+       "      <td>487655</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>23</td>\n",
        "      <td>1</td>\n",
-       "      <td>3.000</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&lt; 1 Year</td>\n",
+       "      <td>No</td>\n",
+       "      <td>21516.0</td>\n",
+       "      <td>152.0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>0.008115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>447501</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&lt; 1 Year</td>\n",
+       "      <td>No</td>\n",
+       "      <td>24493.0</td>\n",
+       "      <td>152.0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0.005510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>486561</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&lt; 1 Year</td>\n",
+       "      <td>No</td>\n",
+       "      <td>27564.0</td>\n",
+       "      <td>152.0</td>\n",
+       "      <td>259</td>\n",
+       "      <td>0.005198</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>404910</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>76</td>\n",
+       "      <td>1</td>\n",
+       "      <td>50.0</td>\n",
        "      <td>1</td>\n",
        "      <td>1-2 Year</td>\n",
        "      <td>No</td>\n",
-       "      <td>31919.000</td>\n",
-       "      <td>26.000</td>\n",
-       "      <td>109</td>\n",
-       "      <td>0.009</td>\n",
+       "      <td>32253.0</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>173</td>\n",
+       "      <td>0.004521</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>389609</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>72</td>\n",
+       "      <td>1</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-2 Year</td>\n",
+       "      <td>No</td>\n",
+       "      <td>47293.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0.004308</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       id  gender  age  driving_license  region_code  previously_insured vehicle_age vehicle_damage  annual_premium  policy_sales_channel  vintage  score\n",
-       "8  436468    Male   51                1       28.000                   0   > 2 Years            Yes       54206.000                26.000       17  0.966\n",
-       "4  454416    Male   35                1       47.000                   0    1-2 Year            Yes       25562.000               156.000       87  0.965\n",
-       "6  473291  Female   41                1        8.000                   0   > 2 Years            Yes        2630.000                 7.000       48  0.948\n",
-       "9  398804  Female   31                1       28.000                   0    < 1 Year            Yes       26086.000               152.000      281  0.943\n",
-       "5  412368  Female   27                1       36.000                   0    < 1 Year            Yes        2630.000               152.000       47  0.859\n",
-       "1  398486  Female   46                1       46.000                   0    1-2 Year             No       21513.000               124.000      217  0.696\n",
-       "3  417679    Male   25                1        3.000                   1    < 1 Year             No       32627.000               152.000       57  0.025\n",
-       "2  452670    Male   25                1        6.000                   1    < 1 Year             No       25254.000               152.000       46  0.011\n",
-       "0  438081  Female   25                1       17.000                   1    < 1 Year             No       30496.000               152.000      156  0.009\n",
-       "7  465941    Male   65                1        3.000                   1    1-2 Year             No       31919.000                26.000      109  0.009"
+       "       id  gender  age  driving_license  region_code  previously_insured  \\\n",
+       "6  417377  Female   45                1         28.0                   0   \n",
+       "5  469824    Male   34                1         14.0                   0   \n",
+       "1  480076  Female   21                1         41.0                   0   \n",
+       "4  398194    Male   52                1          8.0                   1   \n",
+       "2  391401    Male   28                1          3.0                   1   \n",
+       "7  487655  Female   23                1         30.0                   1   \n",
+       "0  447501    Male   23                1         10.0                   1   \n",
+       "3  486561  Female   21                1          8.0                   1   \n",
+       "8  404910    Male   76                1         50.0                   1   \n",
+       "9  389609    Male   72                1         41.0                   1   \n",
+       "\n",
+       "  vehicle_age vehicle_damage  annual_premium  policy_sales_channel  vintage  \\\n",
+       "6    1-2 Year            Yes         43639.0                 157.0      150   \n",
+       "5    1-2 Year            Yes          2630.0                 156.0      168   \n",
+       "1    < 1 Year            Yes         33522.0                 160.0      205   \n",
+       "4    1-2 Year             No          2630.0                 124.0      168   \n",
+       "2    < 1 Year             No          2630.0                 152.0       31   \n",
+       "7    < 1 Year             No         21516.0                 152.0       51   \n",
+       "0    < 1 Year             No         24493.0                 152.0       31   \n",
+       "3    < 1 Year             No         27564.0                 152.0      259   \n",
+       "8    1-2 Year             No         32253.0                 124.0      173   \n",
+       "9    1-2 Year             No         47293.0                  12.0       32   \n",
+       "\n",
+       "      score  \n",
+       "6  0.960510  \n",
+       "5  0.959011  \n",
+       "1  0.788614  \n",
+       "4  0.019903  \n",
+       "2  0.010791  \n",
+       "7  0.008115  \n",
+       "0  0.005510  \n",
+       "3  0.005198  \n",
+       "8  0.004521  \n",
+       "9  0.004308  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
